[gd_scene load_steps=6 format=3 uid="uid://cik35wxfln5ic"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_ntogp"]
[ext_resource type="Texture2D" uid="uid://c571o44bjcxqr" path="res://scenes/player/spr.png" id="2_fsvtb"]
[ext_resource type="Script" path="res://scenes/player/interaction_detectors.gd" id="3_2526s"]
[ext_resource type="Script" path="res://scenes/player/Interact.gd" id="4_8orhh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_knc3n"]
size = Vector2(32, 32)

[node name="Player" type="CharacterBody2D"]
collision_mask = 0
script = ExtResource("1_ntogp")

[node name="sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_fsvtb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_knc3n")

[node name="TurnTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="interaction_detectors" type="Node2D" parent="."]
script = ExtResource("3_2526s")

[node name="raycast_wall" type="RayCast2D" parent="interaction_detectors"]
target_position = Vector2(32, 0)
collision_mask = 2

[node name="raycast_interaction" type="RayCast2D" parent="interaction_detectors"]
target_position = Vector2(32, 0)
collision_mask = 4

[node name="Interact" type="Node" parent="."]
script = ExtResource("4_8orhh")

[connection signal="timeout" from="TurnTimer" to="." method="_on_turn_timer_timeout"]
[connection signal="in_chat" from="Interact" to="." method="_on_interact_in_chat"]
